# fastapi-template-agent

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTIONS.md  README.md  justfile  pyproject.toml
.github/workflows/: claude-code-review.yml  claude.yml
src/: main.py
